<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.richaa.productflavordemo.BuildTypesFragment">

    <LinearLayout
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="40dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/version"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/version_number"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/url_selector"
        android:paddingTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        android:layout_below="@id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chose_url"/>

        <Spinner
            android:id="@+id/urls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:entries="@array/urls"/>
    </LinearLayout>

</RelativeLayout>
